apply plugin: 'com.android.application'
apply plugin: 'com.jakewharton.butterknife'

android {
    compileSdkVersion 28

    def buildVersion = 1897 //Manual version number

    defaultConfig {
        applicationId "com.amazmod.service"
        minSdkVersion 21
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 21
        versionCode buildVersion
        versionName "${buildVersion}"
    }

    buildTypes {
        release {
            minifyEnabled false
            debuggable debugFlag
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }

    compileOptions {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }

}

dependencies {
    implementation project(':transport')
    implementation project(':models')
    implementation files('../libs/SpringboardPluginLib.jar')
    implementation files('../libs/huami_libs.jar')
    implementation files('../libs/WearServices_libs.jar')
    implementation 'com.google.android.material:material:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.0.2'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.emoji:emoji:1.0.0'
    implementation 'androidx.emoji:emoji-appcompat:1.0.0'
    implementation 'androidx.emoji:emoji-bundled:1.0.0'
    implementation 'com.mikepenz:iconics-core:3.0.4@aar'
    implementation 'com.mikepenz:iconics-views:3.0.4@aar'
    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
    implementation 'org.greenrobot:eventbus:3.1.1'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'com.github.marlonlom:timeago:3.0.2'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
    implementation 'com.jakewharton:butterknife:10.1.0'
    implementation 'org.apache.commons:commons-lang3:3.7'
    implementation 'com.github.tbouron.shakedetector:library:1.0.0@aar'
    compileOnly 'com.google.android.wearable:wearable:2.3.0'
    implementation 'com.google.android.support:wearable:2.3.0'
    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:4.2.4"
    implementation "com.github.Raizlabs.DBFlow:dbflow-core:4.2.4"
    implementation "com.github.Raizlabs.DBFlow:dbflow:4.2.4"
    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
    implementation 'org.tinylog:tinylog-api:2.0.0-M4.2'
    implementation 'org.tinylog:tinylog-impl:2.0.0-M4.2'
}

configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        def requested = details.requested
        if (requested.group == 'com.android.support') {
            if (!requested.name.startsWith("multidex")) {
                details.useVersion '$supportLibVersion'
            }
        }
    }
}
